Added defensive handling in suggestion validation/post-processing to prevent IndexOutOfBoundsException caused by unsafe string operations like substring(), lastIndexOf(), and indexOf(). Also added validation and logging to safely handle empty, malformed, or single-word suggestions without breaking the entire chatbot response flow.